Fix overlapping css transformation

--- a/ui/assets/css/main.css
+++ b/ui/assets/css/main.css
@@ -124,7 +124,7 @@ input[type=text]:focus, [type=password]:focus {
     top: 50%;
     left: 50%;
     position: absolute;
-    transform: translate(-50%,-53%);
+    transform: translate(-50%,-51%);
     width: 100%;
     max-width: 380px;
     padding-left: 10px;
@@ -175,7 +175,7 @@ input[type=text-item]:focus {
     color: white;
     font-size: 14px;
     cursor: pointer;
-    padding-top: 14px;
+    padding-top: 15px;
     padding-bottom: 13px;
     margin-top: 5px;
     border-top: 1px solid #2196F3;
